# AVISAME

./: .env.example  .gitignore  API_DOCUMENTATION.md  QUICK_START.md  README.md  postman_collection.json
backend/: .env.example  Dockerfile  api_documentation.py  pyproject.toml
backend/config/: settings.py  urls.py
backend/customers/: admin.py  models.py  serializers.py  services.py  views.py
backend/customers/migrations/: 0001_initial.py
backend/restaurants/: admin.py  models.py  serializers.py  views.py
backend/restaurants/management/commands/: seed_data.py
backend/restaurants/migrations/: 0001_initial.py  0002_menucategory_menuitem.py
backend/tables/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/tables/migrations/: 0001_initial.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/register/: page.tsx
frontend/app/scan/: page.tsx
frontend/app/verify/: page.tsx
frontend/components/: ActionButton.tsx  LoadingSpinner.tsx  MenuItem.tsx  StatusBadge.tsx
frontend/components/ui/: button.tsx
frontend/hooks/: useQRScanner.ts
frontend/lib/: api.ts  storage.ts  utils.ts
frontend/public/: manifest.json
frontend/types/: index.ts  next-pwa.d.ts
mobile/AVISAME/: app.json  package.json  pnpm-lock.yaml  tsconfig.json
mobile/AVISAME/app/: home.tsx  (+5 more)
operations-app/: Dockerfile  index.html  package.json  pnpm-lock.yaml
operations-app/src/: App.tsx
operations-service/: package.json  tsconfig.json
operations-service/src/: server.ts
(+6 files in other folders)
