[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "djangorestframework>=3.14",
    "django-cors-headers>=4.3",
    "psycopg2-binary>=2.9",
    "python-decouple>=3.8",
    "pillow>=10.0",
    "qrcode[pil]>=7.4",
    "django-extensions>=3.2",
    "python-dotenv>=1.2.1",
    "psycopg[binary]>=3.3.1",
    "django-filter>=25.2",
    "twilio>=9.2",
    "drf-spectacular>=0.29.0",
    "drf-spectacular-sidecar>=2025.12.1",
]

